<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">beefood</string>
    <string name="transactions">transactions</string>
    <string name="search">search</string>
    <string name="update">update</string>

    <string name="forgot">forgot</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="not_found">not_found</string>
    <string name="has_an_account">has an account?</string>
    <string name="dont_have_an_account">dont have an account</string>
    <string name="forgot_your_password">forgot your password?</string>

    <string name="send_email">send email</string>

    <!--    profile -->
    <string name="choose_photo">choose photo</string>

    <!--    checkout-->
    <string name="take_photo">take photo</string>
    <string name="checkout">checkout</string>
    <string name="pickup_data">pickup data</string>

    <!--    transaction detail-->
    <string name="cooking">cooking</string>
    <string name="sending">sending</string>
    <string name="done">done</string>

    <string name="ongoing">ongoing</string>
    <string name="past">past</string>


    <!--    sender home-->
    <string name="working">working</string>
    <string name="change_status">change status</string>
    <string name="please_input_photo">please input photo</string>

    <string name="no_sender_yet">no sender yet</string>
    <string name="name">Name</string>
    <string name="sender_name">Sender Name</string>
    <string name="description">Description</string>
    <string name="sender_description_here">Sender Description Here</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="busy">Busy</string>
    <string name="standby">Standby</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="status">Status</string>
    <string name="status_here">Status Here</string>

    <string name="main">main</string>    <!-- notif   -->
    <string name="notif_title">notifikasi beefood</string>
    <string name="order_food">pesan makananmu</string>


    <!-- register    -->
    <string name="email_taken">email already taken</string>

    <!-- forgot-->
    <string name="email_not_found">email not found</string>
    <string name="email_sent">email has been sent</string>
    <string name="restaurant">restaurant</string>
    <string name="sender">sender</string>
    <string name="update_customer">update customer</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="your_rating">your rating</string>
</resources>
