<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">
        <TextView
            android:text="Edit Profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"/>
        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edit_profile_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edit_profile_desc"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/edit_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />
        <Button
            android:id="@+id/edit_upload_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"/>

        <!--            android:text="@string/upload_image"-->
        <Button
            android:id="@+id/sender_edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            />
        <!--            android:text="@string/edit_profile"-->

    </LinearLayout>

</ScrollView>
