<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.Checkout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCarts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            >

            <EditText
                android:id="@+id/input_pickup_data"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                android:text="@string/pickup_data"
                android:layout_marginBottom="15dp"
                />

            <Button
                android:id="@+id/button_select_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_photo"
                android:backgroundTint="@color/pink_p_darker"/>
            <ImageView
                android:id="@+id/pickup_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/checkout_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="totalPrice"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/checkout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:backgroundTint="@color/pink_p_darker"
                    android:layoutDirection="inherit"
                    android:text="@string/checkout"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>


</FrameLayout>
